<resources>
    <string name="app_name">ChatterCamp Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Login">Login</string>
    <string name="etUsername">Enter Username</string>
    <string name="etPassword">Enter Password</string>
    <string name="tvForget">Forget Password?</string>
    <string name="btnLogin">Login</string>
    <string name="tvReg">Register</string>
    <string name="tvTrainerCreate">Create Trainer Account</string>
    <string name="etName">Enter Name</string>
    <string name="etEnterEmail">Enter Email</string>
    <string name="etConfirmPassword">Confirm Password</string>
    <string name="btnCreate">Create</string>
    <string name="tvForgetPassword">Forget Password</string>
    <string name="btnForget">Forget</string>
    <string name="tvGoogle">Sign Up With Google</string>
    <string name="tvHome">Home</string>
    <string name="tvSearch">Search</string>
    <string name="tvMessage">Message</string>
    <string name="tvProfile">My Profile</string>
    <string name="tvName">Name</string>
    <string name="tvEmail">Email</string>
    <string name="tvEdit">Edit Profile</string>
    <string name="tvRateUS">Rate Us</string>
    <string name="etAge">Enter Age</string>
    <string name="etProfession">Enter Profession</string>
    <string name="etQualification">Enter Highest Qualification</string>
    <string name="tvGender">Gender : </string>
    <string name="tvTask">Your task for the day</string>
    <string name="tvEventName">Event Name</string>
    <string name="btnOtp">Send OTP</string>
    <string name="Star">*</string>
    <string name="tvRateUs">Rate Us</string>
    <string name="etMessage">Message</string>
    <string name="tvLogOut">LogOut</string>
    <string name="tvAddTrainers">Add Trainers</string>
    <string-array name="Gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvNotifications">Notifications</string>
    <string name="tvAgenda">Agenda Of The Day</string>
    <string name="tvWorkshops">Workshop Lists</string>
    <string name="tvAgendaText">Embark on a Journey of Creative Exploration</string>
    <string name="tvWorkshopName">Workshop Name</string>
    <string name="tvWorkshopSubject">Swimming</string>
    <string name="tvWrkName">Workshop Name :</string>
    <string name="tvWrkshopName">Name</string>
    <string name="tvSubject">Subject :</string>
    <string name="tvSub">subject</string>
    <string name="tvTiming">Timing :</string>
    <string name="tvStartTime">🕑</string>
    <string name="tvStartDate">📆</string>
    <string name="tvDate2">Date:</string>
    <string name="tvEvent">Workshop Details</string>
    <string name="rbStudent">Student</string>
    <string name="rbTrainer">Trainer</string>
    <string name="tvDescription">Workshop Description</string>
    <string name="tvDesc">Write Here Description</string>
    <string name="btnTrainerList">Trainer\nList</string>
    <string name="btnParticipantList">Participant \nList</string>
    <string name="tvAddWorkshop">Add Workshop</string>
    <string name="tvTittle">Workshop Details</string>
    <string name="btnSaveWorkshop">Save Workshop</string>
    <string name="tvTo">To</string>
    <string name="tvDate">📆</string>
    <string name="tvDob">D.O.B :</string>
    <string name="tvParticipants">Participants</string>
    <string name="tvTrainer">Trainers</string>
    <string name="tvAddParticipants">Add Participants</string>
    <string name="tvParticipantCreate">Create Participant</string>
    <string name="tvParticipantName">Name</string>
    <string name="tvAttendance">Attendance</string>
    <string name="tvTrainerName">Name</string>
    <string name="tvParticipantList">Participant List</string>
    <string name="btnAdd">Add</string>
    <string name="tvTrainerName2">Trainer Name:</string>
    <string name="etTrainerName">Trainer Name</string>
    <string name="tvDay">Day:</string>
    <string name="btnMealInfo">Meal Information</string>
    <string name="tvMealInfo">Meal Information</string>
    <string name="tvDayMeal">Day</string>
    <string name="tvBreakfast">Breakfast Items</string>
    <string name="tvLunchItems">Lunch Items</string>
    <string name="tvMonday">Monday</string>
    <string name="tvTuesday">Tuesday</string>
    <string name="tvWednesday">Wednesday</string>
    <string name="tvThursday">Thursday</string>
    <string name="tvFriday">Friday</string>
    <string name="tvSaturday">Saturday</string>
    <string name="tvTrainerList">Trainer List</string>
    <string name="tvBreakfastVeg">Whole Wheat Toast</string>
    <string name="tvNonVegBreakfast">Mini Chicken Sausages</string>
    <string name="tvLunch">Lunch Items</string>
    <string name="tvVegLunch">Veggie Wrap with Hummus</string>
    <string name="tvNonVegLunch">Grilled Chicken Tenders</string>
    <string name="tvDinner">Dinner Items</string>
    <string name="tvVegDinner">Vegetable Stir-Fry with Tofu</string>
    <string name="tvNonVegDinner">Beef Tacos with Salsa</string>
    <string name="btnShow">Show</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete">Do You Want TO Delete ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="btnEdit">Edit Workshop</string>
    <string name="leftBrkt">  (</string>
    <string name="rightBrkt">)</string>
    <string name="tvWorkshopTime">Time</string>
    <string name="btnDelete">Delete Trainer</string>
    <string-array name="day">
        <item name="Day 1">DAY 1</item>
        <item name="Day 2">DAY 2</item>
        <item name="Day 3">DAY 3</item>
    </string-array>
</resources>